syntax = "proto3";

package message;
option java_package = "gq.baijie.simpleim.prototype.io.network.api.message";

import "google/protobuf/any.proto";

enum TransactionState {
  //TODO FIRST and LAST(only request message)?
  UNSET = 0;
  FIRST = 1;
  KEEP = 2;
  LAST = 3;
}

message Frame {
  uint32 transaction_id = 1;
  TransactionState transaction_state = 2;
  oneof message {
    Request request = 3;
    Response response = 4;
  }
}
//TODO
message Request {
  string function = 1;
  google.protobuf.Any message = 2;
}

message Response {
  oneof result {
    google.protobuf.Any success_message = 1;
    // when success == false
    google.protobuf.Any failure_cause = 2;
  }
}

message CreateAccountRequestMessage {
  string account_id = 1;
  string password = 2;
}

message CreateAccountSuccessMessage {

}

message CreateAccountFailureMessage {
  uint32 error_code = 1;
  string error_message = 2;
}
